--- a/test/.test.env
+++ b/test/.test.env
@@ -1,1 +1,6 @@
 TAMED_CHAT_HTTP_PORT=5001
+
+AWS_KVS_CHANNEL_ARN=arn:aws:kinesisvideo:us-east-1:aaa:channel/xxx/yyy
+AWS_KVS_ACCESSKEY_ID=changeme
+AWS_KVS_SECRET_ACCESSKEY=changeme
+AWS_KVS_REGION=us-east-1
