--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "tamed-chat-srv",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Tamed Chat Server",
   "main": "index.js",
   "author": "Kaplan",
   "license": "MIT",
   "types": "index.d.ts",
   "scripts": {
-    "compile": "tsc",
-    "test": "NODE_ENV=test nodemon",
-    "test-win": "SET NODE_ENV=test&&nodemon"
+    "compile": "tsc"
   },
   "repository": {
     "type": "git",
@@ -18,7 +16,6 @@
   "devDependencies": {
     "@types/express": "4.17.17",
     "@types/socket.io": "3.0.2",
-    "nodemon": "3.0.1",
     "ts-node": "10.9.1",
     "typescript": "5.2.2"
   },
