--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "tamed-chat-srv",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "Tamed Chat Server",
-  "main": "index.js",
+  "main": "src/index.js",
   "author": "Kaplan",
   "license": "MIT",
-  "types": "index.d.ts",
+  "types": "src/index.d.ts",
   "scripts": {
     "compile": "tsc"
   },
